laborations/lab2/testsuite/bad/arith_ass_bool_div_int.cc
int main () {
  int x = true / 5;
  return x;
}
